feat: update Linux to 6.6.51
Also disable max of one commit.

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/.conform.yaml
+++ b/.conform.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2024-07-05T14:59:05Z by kres 8c8b007.
+# Generated on 2024-09-13T08:58:32Z by kres 8be5fa7.
 
 policies:
   - type: commit
@@ -12,7 +12,7 @@ policies:
           gitHubOrganization: siderolabs
       spellcheck:
         locale: US
-      maximumOfOneCommit: true
+      maximumOfOneCommit: false
       header:
         length: 89
         imperative: true
