fix: strategic merge patch delete for map keys
When a map key is deleted, it should be deleted as a whole.
Before the fix it was zeroing out map value by key.

Fixes #9325

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/pkg/machinery/config/configpatcher/testdata/patchdelete/strategic2.yaml
+++ b/pkg/machinery/config/configpatcher/testdata/patchdelete/strategic2.yaml
@@ -4,3 +4,7 @@ cluster:
     admissionControl:
     - name: PodSecurity
       $patch: delete
+machine:
+  nodeLabels:
+    node.kubernetes.io/exclude-from-external-load-balancers:
+      $patch: delete
