docs: fix kubespan name inconsistency
Fix the inconsistent use of KubeSpan in docs and Config suffix for the
yaml config doc kind.

Signed-off-by: Tim Jones <tim.jones@siderolabs.com>
(cherry picked from commit e46227ab95a6d06132e82315f55b5ced533ddabb)

--- a/pkg/machinery/config/types/network/testdata/kubespanendpointsconfig.yaml
+++ b/pkg/machinery/config/types/network/testdata/kubespanendpointsconfig.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1alpha1
-kind: KubespanEndpointsConfig
+kind: KubeSpanEndpointsConfig
 extraAnnouncedEndpoints:
     - 3.4.5.6:123
     - 10.11.12.13:456
