docs: enable 'edit on GitHub' link
See attached screenshot.

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/website/config.toml
+++ b/website/config.toml
@@ -116,17 +116,17 @@ version_menu = "Releases"
 url_latest_version = "/v1.8"
 
 # Repository configuration (URLs for in-page links to opening issues and suggesting changes)
-# github_repo = "https://github.com/googley-example"
+github_repo = "https://github.com/siderolabs/talos"
 
 # An optional link to a related project repo. For example, the sibling repository where your product code lives.
 # github_project_repo = "https://github.com/googley"
 
 # Specify a value here if your content directory is not in your repo's root directory
-# github_subdir = ""
+github_subdir = "website"
 
 # Uncomment this if you have a newer GitHub repo with "main" as the default branch,
 # or specify a new value if you want to reference another branch in your GitHub links
-# github_branch= "main"
+github_branch= "main"
 
 # Google Custom Search Engine ID. Remove or comment out to disable search.
 # gcs_engine_id = "d72aa9b2712488cc3"
