--- a/.golangci.yml
+++ b/.golangci.yml
@@ -105,6 +105,10 @@ linters-settings:
       - golang.zx2c4.com/wireguard
       - golang.zx2c4.com/wireguard/wgctrl
       - cloud.google.com/go
+      # fd-leak related replacements: https://github.com/siderolabs/talos/issues/9412
+      - github.com/insomniacslk/dhcp
+      - github.com/safchain/ethtool
+      - github.com/vishvananda/netlink
     retract-allow-no-explanation: false
     exclude-forbidden: false
 
