feat: enable QEDF driver
See https://github.com/siderolabs/talos/discussions/9391

Also bump pkgs & tools, bring in Go 1.23.2, containerd v2.0.0-rc.5

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/hack/release.toml
+++ b/hack/release.toml
@@ -29,8 +29,9 @@ All other release assets can be downloaded from [Image Factory](https://www.talo
         title = "Component Updates"
         description = """\
 Linux: 6.6.52
+containerd: 2.0.0-rc.5
 
-Talos is built with Go 1.23.1.
+Talos is built with Go 1.23.2.
 """
 
     [notes.cgroups]
