--- a/internal/app/machined/pkg/runtime/v1alpha1/platform/scaleway/testdata/expected-v3.yaml
+++ b/internal/app/machined/pkg/runtime/v1alpha1/platform/scaleway/testdata/expected-v3.yaml
@@ -29,7 +29,7 @@ routes:
     - family: inet6
       dst: ""
       src: ""
-      gateway: '2001:111:222:3333::'
+      gateway: fe80::dc00:ff:fe12:3456
       outLinkName: eth0
       table: main
       priority: 2048
@@ -44,21 +44,14 @@ hostnames:
       layer: platform
 resolvers: []
 timeServers: []
-operators:
-    - operator: dhcp4
-      linkName: eth0
-      requireUp: true
-      dhcp4:
-        routeMetric: 1024
-      layer: platform
+operators: []
 externalIPs:
-    - 11.22.222.222
     - 2001:111:222:3333::1
 metadata:
     platform: scaleway
     hostname: scw-talos
-    region: fr-par
-    zone: fr-par-1
+    region: nl-ams
+    zone: nl-ams-1
     instanceType: DEV1-S
     instanceId: 11111111-1111-1111-1111-111111111111
-    providerId: scaleway://instance/fr-par-1/11111111-1111-1111-1111-111111111111
+    providerId: scaleway://instance/nl-ams-1/11111111-1111-1111-1111-111111111111
