feat: update Flannel to v0.25.7
See https://github.com/flannel-io/flannel/releases/tag/v0.25.7

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/hack/release.toml
+++ b/hack/release.toml
@@ -30,6 +30,7 @@ All other release assets can be downloaded from [Image Factory](https://www.talo
         description = """\
 Linux: 6.6.52
 containerd: 2.0.0-rc.5
+Flannel: 0.25.7
 
 Talos is built with Go 1.23.2.
 """
