--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2024-09-23T11:15:31Z by kres 8be5fa7.
+# Generated on 2024-10-08T12:03:35Z by kres 34e72ac.
 
 name: default
 concurrency:
@@ -591,7 +591,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: _out/extensions
-          ref: main
+          ref: release-1.8
           repository: siderolabs/extensions
       - name: set variables
         run: |
@@ -745,7 +745,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: _out/extensions
-          ref: main
+          ref: release-1.8
           repository: siderolabs/extensions
       - name: set variables
         run: |
@@ -1437,7 +1437,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: _out/extensions
-          ref: main
+          ref: release-1.8
           repository: siderolabs/extensions
       - name: unshallow-extensions
         run: |
@@ -2871,7 +2871,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: _out/extensions
-          ref: main
+          ref: release-1.8
           repository: siderolabs/extensions
       - name: set variables
         run: |
