--- a/.github/workflows/integration-extensions-cron.yaml
+++ b/.github/workflows/integration-extensions-cron.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2024-09-23T09:06:18Z by kres 8be5fa7.
+# Generated on 2024-10-08T12:03:35Z by kres 34e72ac.
 
 name: integration-extensions-cron
 concurrency:
@@ -86,7 +86,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: _out/extensions
-          ref: main
+          ref: release-1.8
           repository: siderolabs/extensions
       - name: unshallow-extensions
         run: |
