--- a/.github/workflows/integration-qemu-csi-longhorn-cron.yaml
+++ b/.github/workflows/integration-qemu-csi-longhorn-cron.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2024-09-09T12:40:13Z by kres 8be5fa7.
+# Generated on 2024-10-08T11:35:58Z by kres 34e72ac.
 
 name: integration-qemu-csi-longhorn-cron
 concurrency:
@@ -86,7 +86,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: _out/extensions
-          ref: main
+          ref: release-1.8
           repository: siderolabs/extensions
       - name: set variables
         run: |
