--- a/.kres.yaml
+++ b/.kres.yaml
@@ -991,7 +991,7 @@ spec:
         - name: checkout extensions
           checkoutStep:
             repository: siderolabs/extensions
-            ref: main
+            ref: release-1.8
             path: _out/extensions
         - name: unshallow-extensions
           nonMakeStep: true
@@ -1328,7 +1328,7 @@ spec:
         - name: checkout extensions
           checkoutStep:
             repository: siderolabs/extensions
-            ref: main
+            ref: release-1.8
             path: _out/extensions
         - name: set variables
           nonMakeStep: true
@@ -1728,7 +1728,7 @@ spec:
         - name: checkout extensions
           checkoutStep:
             repository: siderolabs/extensions
-            ref: main
+            ref: release-1.8
             path: _out/extensions
         - name: set variables
           nonMakeStep: true
@@ -1825,7 +1825,7 @@ spec:
         - name: checkout extensions
           checkoutStep:
             repository: siderolabs/extensions
-            ref: main
+            ref: release-1.8
             path: _out/extensions
         - name: set variables
           nonMakeStep: true
