--- a/.github/workflows/integration-qemu-cron.yaml
+++ b/.github/workflows/integration-qemu-cron.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2024-09-20T16:31:33Z by kres 8be5fa7.
+# Generated on 2024-10-16T13:22:04Z by kres 34e72ac.
 
 name: integration-qemu-cron
 concurrency:
@@ -85,6 +85,7 @@ jobs:
           QEMU_EXTRA_DISKS_DRIVERS: ide,nvme
           QEMU_EXTRA_DISKS_SIZE: "10240"
           WITH_CONFIG_PATCH_WORKER: '@hack/test/patches/ephemeral-nvme.yaml:@hack/test/patches/dm-raid-module.yaml'
+          WITH_JSON_LOGS: "true"
         run: |
           sudo -E make e2e-qemu
       - name: save artifacts
