--- a/.kres.yaml
+++ b/.kres.yaml
@@ -29,7 +29,7 @@ spec:
     - kernel
     - security
     - ci
-    - ^v1.8
+    - ^v1.9
   licenseChecks:
     - skipPaths:
         - .git/
@@ -507,6 +507,7 @@ spec:
           withSudo: true
           environment:
             IMAGE_REGISTRY: registry.dev.siderolabs.io
+            GRPC_ENFORCE_ALPN_ENABLED: "false"
         - name: save-talos-logs
           conditions:
             - always
@@ -557,6 +558,7 @@ spec:
           withSudo: true
           environment:
             IMAGE_REGISTRY: registry.dev.siderolabs.io
+            GRPC_ENFORCE_ALPN_ENABLED: "false"
         - name: save-talos-logs
           conditions:
             - always
@@ -607,6 +609,7 @@ spec:
           withSudo: true
           environment:
             IMAGE_REGISTRY: registry.dev.siderolabs.io
+            GRPC_ENFORCE_ALPN_ENABLED: "false"
         - name: save-talos-logs
           conditions:
             - always
