--- a/hack/release.toml
+++ b/hack/release.toml
@@ -11,17 +11,7 @@ previous = "v1.8.0"
 
 pre_release = true
 
-preface = """\
-Starting with Talos v1.8.0, only standard assets would be published as github release assets. These include:
-
-* `cloud-images.json`
-* `talosctl` binaries
-* `kernel`
-* `initramfs`
-* `metal` iso and disk images
-* `talosctl-cni-bundle`
-
-All other release assets can be downloaded from [Image Factory](https://www.talos.dev/latest/talos-guides/install/boot-assets/#image-factory).
+preface = """
 """
 
 [notes]
@@ -41,6 +31,12 @@ Talos is built with Go 1.23.2.
 The `talosctl cgroups` command has been added to the `talosctl` tool.
 This command allows you to view the cgroup resource consumption and limits for a machine, e.g.
 `talosctl cgroups --preset memory`.
+"""
+
+    [notes.udevd]
+        title = "udevd"
+        description = """\
+Talos previously used `udevd` to provide `udevd`, now it uses `systemd-udevd` instead.
 """
 
 [make_deps]
