--- a/hack/release.toml
+++ b/hack/release.toml
@@ -22,6 +22,7 @@ Linux: 6.6.57
 containerd: 2.0.0-rc.5
 Flannel: 0.25.7
 Kubernetes: 1.32.0-alpha.2
+runc: 1.2.0
 
 Talos is built with Go 1.23.2.
 """
