--- a/hack/release.toml
+++ b/hack/release.toml
@@ -7,7 +7,7 @@ match_deps = "^github.com/((talos-systems|siderolabs)/[a-zA-Z0-9-]+)$"
 ignore_deps = ["github.com/coredns/coredns"]
 
 # previous release
-previous = "v1.8.0"
+previous = "v1.8.1"
 
 pre_release = false
 
@@ -28,9 +28,9 @@ All other release assets can be downloaded from [Image Factory](https://www.talo
     [notes.updates]
         title = "Component Updates"
         description = """\
-Linux: 6.6.54
-containerd: 2.0.0-rc.5
-Flannel: 0.25.7
+Linux: 6.6.58
+containerd: 2.0.0-rc.6
+runc: 1.2.0
 
 Talos is built with Go 1.22.8.
 """
