--- a/hack/release.toml
+++ b/hack/release.toml
@@ -31,6 +31,7 @@ All other release assets can be downloaded from [Image Factory](https://www.talo
 Linux: 6.6.58
 containerd: 2.0.0-rc.6
 runc: 1.2.0
+Kubernetes: 1.31.2
 
 Talos is built with Go 1.22.8.
 """
