feat: add auditd service
Adds a auditd service that gathers all audit logs from kernel.

Signed-off-by: Noel Georgi <git@frezbo.dev>
Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>
Signed-off-by: Noel Georgi <git@frezbo.dev>

--- a/hack/release.toml
+++ b/hack/release.toml
@@ -27,6 +27,13 @@ runc: 1.2.0
 Talos is built with Go 1.23.2.
 """
 
+    [notes.auditd]
+        title = "Auditd"
+        description = """\
+Talos Linux now starts a auditd service by default.
+Logs can be read with `talosctl logs auditd`.
+"""
+
     [notes.cgroups]
         title = "`talosctl cgroups`"
         description = """\
