--- a/.kres.yaml
+++ b/.kres.yaml
@@ -204,6 +204,7 @@ spec:
               - talosctl-linux-arm64
               - talosctl-linux-armv7
               - talosctl-windows-amd64.exe
+              - talosctl-windows-arm64.exe
               - vmlinuz-amd64
               - vmlinuz-arm64
             generateChecksums: true
