--- a/hack/release.toml
+++ b/hack/release.toml
@@ -19,7 +19,7 @@ preface = """
         title = "Component Updates"
         description = """\
 Linux: 6.6.59
-containerd: 2.0.0-rc.6
+containerd: 2.0.0
 Flannel: 0.26.0
 Kubernetes: 1.32.0-alpha.3
 runc: 1.2.1
