--- a/hack/release.toml
+++ b/hack/release.toml
@@ -21,7 +21,7 @@ preface = """
 Linux: 6.6.59
 containerd: 2.0.0
 Flannel: 0.26.0
-Kubernetes: 1.32.0-alpha.3
+Kubernetes: 1.32.0-beta.0
 runc: 1.2.1
 
 Talos is built with Go 1.23.2.
