docs: add apparmor enablement release notes
Add AppArmor release notes.

Signed-off-by: Noel Georgi <git@frezbo.dev>

--- a/hack/release.toml
+++ b/hack/release.toml
@@ -27,6 +27,22 @@ runc: 1.2.1
 Talos is built with Go 1.23.2.
 """
 
+    [notes.apparmor]
+        title = "AppArmor"
+        description = """\
+Talos Linux starting with v1.9 will ship with SELinux LSM enabled by default.
+If you need to use AppArmor LSM add the following to the machine configuration:
+
+```yaml
+machine:
+  install:
+     extraKernelArgs:
+      - -selinux
+      - lsm=lockdown,capability,yama,apparmor,bpf
+      - apparmor=1
+```
+"""
+
     [notes.auditd]
         title = "Auditd"
         description = """\
