--- a/hack/release.toml
+++ b/hack/release.toml
@@ -18,11 +18,11 @@ preface = """
     [notes.updates]
         title = "Component Updates"
         description = """\
-Linux: 6.6.59
-containerd: 2.0.0
-Flannel: 0.26.0
-Kubernetes: 1.32.0-beta.0
-runc: 1.2.1
+* Linux: 6.6.59
+* containerd: 2.0.0
+* Flannel: 0.26.0
+* Kubernetes: 1.32.0-beta.0
+* runc: 1.2.1
 
 Talos is built with Go 1.23.2.
 """
@@ -68,7 +68,7 @@ This command allows you to view the cgroup resource consumption and limits for a
     [notes.udevd]
         title = "udevd"
         description = """\
-Talos previously used `udevd` to provide `udevd`, now it uses `systemd-udevd` instead.
+Talos previously used `eudev` to provide `udevd`, now it uses `systemd-udevd` instead.
 """
 
 [make_deps]
