--- a/internal/app/machined/pkg/runtime/v1alpha1/platform/nocloud/testdata/expected-v2.yaml
+++ b/internal/app/machined/pkg/runtime/v1alpha1/platform/nocloud/testdata/expected-v2.yaml
@@ -11,6 +11,12 @@ addresses:
       scope: global
       flags: permanent
       layer: platform
+    - address: 10.22.14.2/32
+      linkName: eth1
+      family: inet4
+      scope: global
+      flags: permanent
+      layer: platform
     - address: 10.10.4.140/29
       linkName: bond0
       family: inet4
@@ -19,6 +25,13 @@ addresses:
       layer: platform
 links:
     - name: eth0
+      logical: false
+      up: true
+      mtu: 0
+      kind: ""
+      type: netrom
+      layer: platform
+    - name: eth1
       logical: false
       up: true
       mtu: 0
@@ -93,11 +106,35 @@ routes:
       protocol: static
       layer: platform
     - family: inet4
+      dst: ""
+      src: ""
+      gateway: 192.168.14.1
+      outLinkName: eth1
+      table: main
+      priority: 100
+      scope: global
+      type: unicast
+      flags: ""
+      protocol: static
+      layer: platform
+    - family: inet4
+      dst: 192.168.14.1/32
+      src: 10.22.14.2
+      gateway: ""
+      outLinkName: eth1
+      table: main
+      priority: 100
+      scope: link
+      type: unicast
+      flags: ""
+      protocol: static
+      layer: platform
+    - family: inet4
       dst: 10.0.0.0/8
       src: ""
       gateway: 10.10.4.147
       outLinkName: bond0
-      table: unspec
+      table: main
       priority: 1024
       scope: global
       type: unicast
@@ -109,7 +146,7 @@ routes:
       src: ""
       gateway: 10.10.4.147
       outLinkName: bond0
-      table: unspec
+      table: main
       priority: 1024
       scope: global
       type: unicast
@@ -121,7 +158,7 @@ routes:
       src: ""
       gateway: 10.10.4.147
       outLinkName: bond0
-      table: unspec
+      table: main
       priority: 1024
       scope: global
       type: unicast
