--- a/hack/release.toml
+++ b/hack/release.toml
@@ -31,6 +31,7 @@ All other release assets can be downloaded from [Image Factory](https://www.talo
 Linux: 6.6.64
 runc: 1.2.3
 Kubernetes: 1.31.4
+etcd: 3.5.17
 
 Talos is built with Go 1.22.10.
 """
