--- a/hack/release.toml
+++ b/hack/release.toml
@@ -7,7 +7,7 @@ match_deps = "^github.com/((talos-systems|siderolabs)/[a-zA-Z0-9-]+)$"
 ignore_deps = ["github.com/coredns/coredns"]
 
 # previous release
-previous = "v1.8.1"
+previous = "v1.8.2"
 
 pre_release = false
 
@@ -28,12 +28,11 @@ All other release assets can be downloaded from [Image Factory](https://www.talo
     [notes.updates]
         title = "Component Updates"
         description = """\
-Linux: 6.6.58
-containerd: 2.0.0-rc.6
-runc: 1.2.0
-Kubernetes: 1.31.2
+Linux: 6.6.60
+containerd: 2.0.0
+runc: 1.2.1
 
-Talos is built with Go 1.22.8.
+Talos is built with Go 1.22.9.
 """
 
 [make_deps]
