chore: remove i915/amdgpu drivers
Drop i915 and amdgpu drivers from Talos rootfs, these will be packaged
as extensions containing both firmware and drivers.

Some modules like `ttm`, `i2c-algo-bit` etc have been left off since they are used by both amdgpu and
i915, so makes sense to keep in plain talos.

Part of: #9728

Signed-off-by: Noel Georgi <git@frezbo.dev>

--- a/hack/release.toml
+++ b/hack/release.toml
@@ -27,6 +27,14 @@ preface = """
 Talos is built with Go 1.23.3.
 """
 
+    [notes.drm]
+        title = "Direct Rendering Manager (DRM)"
+        description = """\
+Starting with Talos 1.9, the `i915` and `amdgpu` DRM drivers will be dropped from the Talos squashfs.
+There will be new system extensions named `i915` and `amdgpu` that would contain both the drivers and firmware packaged together.
+Upgrades via Image Factory will automatically include the new extensions if previously `i915-ucode` or `amdgpu-firmware` were used.
+"""
+
     [notes.usernamespaces]
         title = "User Namespaces"
         description = """\
