feat: introduce feature flag to control new sorting behaviour, sort by prefix length if one contains the other
A new feature flag, enabled by default in 1.9, controls sorting
behavior. If a prefix contains the other the longest is preferred.

Signed-off-by: Niklas Voss <niklas.voss@gmail.com>

--- a/pkg/machinery/config/types/v1alpha1/testdata/stability/v1.9/base-controlplane.yaml
+++ b/pkg/machinery/config/types/v1alpha1/testdata/stability/v1.9/base-controlplane.yaml
@@ -18,6 +18,7 @@ machine:
     features:
         rbac: true
         stableHostname: true
+        longPrefixPreference: true
         apidCheckExtKeyUsage: true
         diskQuotaSupport: true
         kubePrism:
