--- a/pkg/machinery/config/types/v1alpha1/testdata/stability/v1.9/base-worker.yaml
+++ b/pkg/machinery/config/types/v1alpha1/testdata/stability/v1.9/base-worker.yaml
@@ -18,6 +18,7 @@ machine:
     features:
         rbac: true
         stableHostname: true
+        longPrefixPreference: true
         apidCheckExtKeyUsage: true
         diskQuotaSupport: true
         kubePrism:
