--- a/pkg/machinery/config/types/v1alpha1/testdata/stability/v1.9/overrides-worker.yaml
+++ b/pkg/machinery/config/types/v1alpha1/testdata/stability/v1.9/overrides-worker.yaml
@@ -37,6 +37,7 @@ machine:
     features:
         rbac: true
         stableHostname: true
+        longPrefixPreference: true
         apidCheckExtKeyUsage: true
         diskQuotaSupport: true
         kubePrism:
